<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Crush</string>
    <string name="getPhoto">photo</string>
    <string name="powered">Powered by Unsplash.com</string>
    <string name="version_code">2.5.7</string>
    <string name="about_app">ABOUT APP</string>
    <string name="introduce">INTRODUCE</string>
    <string name="gitHub">GITHUB</string>
    <string name="email">EMAIL</string>
    <string name="source_code">SOURCE CODE</string>
    <string name="translators">TRANSLATORS</string>
    <string name="libraries">LIBRARIES</string>
    <string name="enter">ENTER</string>
    <string name="copy">COPY</string>
    <string name="next">NEXT</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="backstage">BACKSTAGE</string>
    <string name="details">DETAILS</string>
    <string name="restart">RESTART</string>
    <string name="create">CREATE</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="check">CHECK</string>
    <string name="set">SET</string>
    <string name="search">SEARCH</string>
    <string name="all">ALL</string>
    <string name="stats">Stats</string>
    <string name="by">By</string>
    <string name="on">On</string>
    <string name="now">Now</string>
    <string name="open_download_link">Open Download Web Page</string>
    <string name="unsplash">Unsplash.com</string>
    <string name="about_unsplash">Free (do whatever you want) high-resolution photos.</string>
    <string name="retrofit">Retrofit 2.0</string>
    <string name="about_retrofit">Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="glide">Glide</string>
    <string name="about_glide">An image loading and caching library for Android focused on smooth scrolling.</string>
    <string name="circular_progress_view">CircularProgressView</string>
    <string name="about_circular_progress_view">Material style circular progress bar for Android.</string>
    <string name="circle_image_view">CircleImageView</string>
    <string name="about_circle_image_view">A circular ImageView for Android.</string>
    <string name="tagLayout">FlowLayout</string>
    <string name="about_tagLayout">Android flow layout.</string>
    <string name="photo_view">PhotoView</string>
    <string name="about_photo_view">A widget to preview and scale image.</string>
    <string name="page_indicator">InkPageIndicator</string>
    <string name="about_page_indicator">InkPageIndicator created by @nickbutcher for Plaid https://github.com/nickbutcher/plaid and backported by David Pacioianu for API 14+ (4.0+).</string>
    <string name="greendao_db">greenDAO</string>
    <string name="about_greendao_db">greenDAO is a light and fast ORM solution for Android that maps objects to SQLite databases.</string>
    <string name="feedback_click_retry">CLICK TO RETRY</string>
    <string name="feedback_load_failed_tv">LOAD FAILED</string>
    <string name="feedback_load_failed_toast">Load failed.</string>
    <string name="feedback_load_nothing_tv">LOAD NOTHING</string>
    <string name="feedback_load_nothing_toast">Load nothing.</string>
    <string name="feedback_search_failed_tv">SEARCH FAILED</string>
    <string name="feedback_search_failed_toast">Search failed.</string>
    <string name="feedback_search_nothing_tv">SEARCH NOTHING</string>
    <string name="feedback_search_nothing_toast">Search nothing.</string>
    <string name="feedback_search_bar">Search photos, collections or users</string>
    <string name="feedback_search_photos_bar">Key word of photos</string>
    <string name="feedback_search_users_bar">Key word of users</string>
    <string name="feedback_search_photos_tv">SEARCH PHOTOS</string>
    <string name="feedback_search_collections_tv">SEARCH COLLECTIONS</string>
    <string name="feedback_search_users_tv">SEARCH USERS</string>
    <string name="feedback_is_over">Is over.</string>
    <string name="feedback_notify_restart">Restart to work.</string>
    <string name="feedback_download_success">Download success.</string>
    <string name="feedback_download_photo_success">Download photo success.\nstorage/emulated/0/Pictures/Mysplash</string>
    <string name="feedback_download_photo_failed">Download photo failed.</string>
    <string name="feedback_download_collection_success">Download collection success.\nstorage/emulated/0/Pictures/Mysplash</string>
    <string name="feedback_download_collection_failed">Download collection failed.</string>
    <string name="feedback_downloading">DOWNLOADING</string>
    <string name="feedback_download_start">Download start.</string>
    <string name="feedback_no_sd_card">Cannot found SD card.</string>
    <string name="feedback_create_file_failed">Create file failed.</string>
    <string name="feedback_need_permission">Failed to get permission.</string>
    <string name="feedback_choose_share_app">Share photo</string>
    <string name="feedback_choose_wallpaper_app">Set wallpaper</string>
    <string name="feedback_download_repeat">Download repeat.</string>
    <string name="feedback_size">Size</string>
    <string name="feedback_color">Color</string>
    <string name="feedback_location">Location</string>
    <string name="feedback_model">Model</string>
    <string name="feedback_exposure">Exposure time</string>
    <string name="feedback_aperture">Aperture</string>
    <string name="feedback_focal">Focal length</string>
    <string name="feedback_iso">Iso</string>
    <string name="feedback_portfolio_is_null">Portfolio link is null.</string>
    <string name="feedback_no_filter">No filter item.</string>
    <string name="feedback_request_token_failed">Request access token failed.</string>
    <string name="feedback_login_text">Login to your Unsplash account.</string>
    <string name="feedback_please_login">Please login.</string>
    <string name="feedback_edit_my_profile">Edit profile</string>
    <string name="feedback_edit_username">Username (letters, numbers, underscores)</string>
    <string name="feedback_edit_first_name">First name</string>
    <string name="feedback_edit_last_name">Last name</string>
    <string name="feedback_edit_email">Email address</string>
    <string name="feedback_edit_portfolio">Personal site/portfolio</string>
    <string name="feedback_edit_location">Location</string>
    <string name="feedback_edit_bio">Bio</string>
    <string name="feedback_update_profile_failed">Cannot edit profile.</string>
    <string name="feedback_add_to_collection">Add to collection</string>
    <string name="feedback_delete_from_collection">Delete from collection</string>
    <string name="feedback_create_collection">Create new collection</string>
    <string name="feedback_edit_collection">Edit collection</string>
    <string name="feedback_name">Name</string>
    <string name="feedback_description">Description (optional)</string>
    <string name="feedback_collection_private">Make collection private</string>
    <string name="feedback_name_is_required">Name is required.</string>
    <string name="feedback_sure">Are you sure?</string>
    <string name="feedback_notify_set_back_to_top">You can set the back pressed effect.</string>
    <string name="feedback_add_photo_failed">Add photo failed.</string>
    <string name="feedback_delete_photo_failed">Delete photo failed.</string>
    <string name="feedback_create_collection_failed">Create collection failed.</string>
    <string name="feedback_update_collection_failed">Update collection failed.</string>
    <string name="feedback_delete_collection_failed">Delete collection failed.</string>
    <string name="feedback_overload">Overload</string>
    <string name="feedback_exceed_rate_limit">In this hour, the visits of Uysplash API exceed the rate limit, So we cannot load anything now.\n\nYou can try again in next hour.</string>
    <string name="feedback_confirm_change_theme">Confirm Change Theme</string>
    <string name="feedback_change_theme_warning">Change theme now will make downloads canceled.</string>
    <string name="feedback_confirm_restart">Confirm Restart</string>
    <string name="feedback_restart_warning">Restart application now will make downloads canceled.</string>
    <string name="feedback_click_again_to_exit">Click again to exit.</string>
    <string name="feedback_share_photo_title">A photo from Unsplash.com</string>
    <string name="feedback_share_photo_extra">Taken by # on #\n</string>
    <string name="feedback_share_collection_title">A Collection from Unsplash.com</string>
    <string name="feedback_share_collection_extra">Created by # on #\n</string>
    <string name="feedback_share_user_title">A user profile from Unsplash.com</string>
    <string name="feedback_share_user_extra">#\n</string>
    <string name="introduce_title_search">New Search View</string>
    <string name="introduce_description_search">The more powerful Search View is coming. Not only photos, you can also search users and collections now.</string>
    <string name="introduce_title_filter">Multi-Filter</string>
    <string name="introduce_description_filter">Find this function in drawer, you can filter photos by multiple conditions.</string>
    <string name="introduce_title_back_top">Scroll To Top</string>
    <string name="introduce_description_back_top">Click top bar or back button, the photo list view will scroll back to the top.</string>
    <string name="introduce_title_start">Start</string>
    <string name="introduce_description_start">Hope you like Mysplash.</string>
    <string name="action_home">Home</string>
    <string name="action_multi_filter">Multi-Filter</string>
    <string name="action_category_buildings">Buildings</string>
    <string name="action_category_food_drink">Food &amp; Drink</string>
    <string name="action_category_nature">Nature</string>
    <string name="action_category_objects">Objects</string>
    <string name="action_category_people">People</string>
    <string name="action_category_technology">Technology</string>
    <string name="action_change_theme">Change Theme</string>
    <string name="action_download_manage">Downloads</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_clear_text">Clear text</string>
    <string name="action_share">Share</string>
    <string name="action_menu">Menu</string>
    <string name="action_open_portfolio">Open Portfolio Link</string>
    <string name="action_edit">Edit</string>
    <string name="action_download">Download</string>
    <string name="action_path">Download Path</string>
    <string name="action_cancel_all">Cancel All</string>
    <string name="transition_activity_container">activity_container</string>
    <string name="transition_photo_image">photo_image</string>
    <string name="settings_category_basic">Basic</string>
    <string name="settings_title_back_to_top">Press back button to scroll to top</string>
    <string name="settings_title_language">Language</string>
    <string name="settings_auto_save">AutoSave</string>
    <string name="settings_category_filter">Filter</string>
    <string name="settings_title_default_order">Default order</string>
    <string name="settings_title_default_collection_type">Default collection type</string>
    <string name="settings_category_download">Download</string>
    <string name="settings_title_download_scale">Download scale</string>
    <string name="key_back_to_top">back_to_top</string>
    <string name="key_language">language</string>
    <string name="key_auto_save">AutoSave</string>
    <string name="key_default_photo_order">default_photo_order</string>
    <string name="key_default_collection_type">default_collection_type</string>
    <string name="key_download_scale">download_scale</string>
</resources>